--- a/live-share-dice-roller/appPackage/manifest.json
+++ b/live-share-dice-roller/appPackage/manifest.json
@@ -32,6 +32,7 @@
                 "groupchat"
             ],
             "context": [
+                "meetingChatTab",
                 "meetingSidePanel",
                 "meetingStage"
             ]
