--- a/largescale-notification-bot/teamsapp.local.yml
+++ b/largescale-notification-bot/teamsapp.local.yml
@@ -1,14 +1,17 @@
-# yaml-language-server: $schema=https://aka.ms/teams-toolkit/1.0.0/yaml.schema.json
+# yaml-language-server: $schema=https://aka.ms/teams-toolkit/v1.2/yaml.schema.json
 # Visit https://aka.ms/teamsfx-v5.0-guide for details on this file
 # Visit https://aka.ms/teamsfx-actions for details on actions
-version: 1.0.0
+version: v1.2
+
+additionalMetadata:
+  sampleTag: TeamsFx-Samples:large-scale-notification
 
 provision:
   # Creates a Teams app
   - uses: teamsApp/create
     with:
       # Teams app name
-      name: notification-scale-demo-${{TEAMSFX_ENV}}
+      name: large-scale-notifi-${{TEAMSFX_ENV}}
     # Write the information of created resources into environment file for
     # the specified environment variable(s).
     writeToEnvironmentFile: 
@@ -18,7 +21,7 @@ provision:
   - uses: botAadApp/create
     with:
       # The Azure Active Directory application's display name
-      name: notification-scale-demo-${{TEAMSFX_ENV}}
+      name: large-scale-notifi-${{TEAMSFX_ENV}}
     writeToEnvironmentFile:
       # The Azure Active Directory application's client id created for bot.
       botId: BOT_ID
@@ -29,7 +32,7 @@ provision:
   - uses: botFramework/create
     with:
       botId: ${{BOT_ID}}
-      name: notification-scale-demo
+      name: large-scale-notification
       messagingEndpoint: ${{BOT_ENDPOINT}}/api/messages
       description: ""
       channels:
