--- a/teams-chef-bot/teamsapp.local.yml
+++ b/teams-chef-bot/teamsapp.local.yml
@@ -31,17 +31,17 @@ provision:
 
   - uses: teamsApp/validateManifest # Validate using manifest schema
     with:
-      manifestPath: ./teamsAppManifest/manifest.json # Path to manifest template
+      manifestPath: ./appPackage/manifest.json # Path to manifest template
 
   - uses: teamsApp/zipAppPackage # Build Teams app package with latest env value
     with:
-      manifestPath: ./teamsAppManifest/manifest.json # Path to manifest template
-      outputZipPath: ./build/teamsAppManifest/appPackage.${{TEAMSFX_ENV}}.zip
-      outputJsonPath: ./build/teamsAppManifest/manifest.${{TEAMSFX_ENV}}.json
+      manifestPath: ./appPackage/manifest.json # Path to manifest template
+      outputZipPath: ./appPackage/build/appPackage.${{TEAMSFX_ENV}}.zip
+      outputJsonPath: ./appPackage/build/manifest.${{TEAMSFX_ENV}}.json
 
   - uses: teamsApp/update # Apply the Teams app manifest to an existing Teams app in Teams Developer Portal. Will use the app id in manifest file to determine which Teams app to update.
     with:
-      appPackagePath: ./build/teamsAppManifest/appPackage.${{TEAMSFX_ENV}}.zip # Relative path to this file. This is the path for built zip file.
+      appPackagePath: ./appPackage/build/appPackage.${{TEAMSFX_ENV}}.zip # Relative path to this file. This is the path for built zip file.
 
 deploy:
   - uses: script
