--- a/sso-enabled-tab-via-apim-proxy/env/.env.local
+++ b/sso-enabled-tab-via-apim-proxy/env/.env.local
@@ -16,6 +16,8 @@ AAD_APP_OAUTH_AUTHORITY_HOST=
 AAD_APP_ACCESS_AS_USER_PERMISSION_ID=
 TEAMS_APP_PACKAGE_PATH=
 APIM_ENDPOINT=
+APIM_GRAPH_PROXY=
+APIM_CHECK_CONSNET=
 
 # Generated during deploy, you can also add your own variables.
 SSL_CRT_FILE=
