--- a/large-scale-notification/package.json
+++ b/large-scale-notification/package.json
@@ -26,7 +26,7 @@
     "@azure/data-tables": "^13.2.2",
     "@azure/service-bus": "^7.9.0",
     "@microsoft/adaptivecards-tools": "^1.0.0",
-    "@microsoft/teamsfx": "2.2.3-alpha.13d1e618d.0",
+    "@microsoft/teamsfx": "2.2.3-beta.2023081506.0",
     "botbuilder": "^4.18.0",
     "durable-functions": "^2.1.2",
     "luxon": "^3.3.0"
