--- a/react-retail-dashboard/appPackage/manifest.json
+++ b/react-retail-dashboard/appPackage/manifest.json
@@ -8,7 +8,7 @@
     "developer": {
         "name": "PiaSys.com",
         "websiteUrl": "https://www.piasys.com/",
-        "privacyUrl": "http://piasys.com/privacy/",
+        "privacyUrl": "https://piasys.com/privacy/",
         "termsOfUseUrl": "https://www.piasys.com/terms-of-use/"
     },
     "icons": {
