--- a/.config/samples-config-v3.json
+++ b/.config/samples-config-v3.json
@@ -17,6 +17,7 @@
             ],
             "time": "5min to run",
             "configuration": "Ready for debug",
+            "thumbnailPath": "assets/thumbnail.png",
             "gifPath": "assets/sampleDemo.gif",
             "suggested": true
         },
@@ -36,6 +37,7 @@
             ],
             "time": "5min to run",
             "configuration": "Ready for debug",
+            "thumbnailPath": "assets/thumbnail.png",
             "gifPath": "assets/sampleDemo.gif",
             "suggested": true
         },
@@ -57,6 +59,7 @@
             ],
             "time": "5min to run",
             "configuration": "Ready for debug",
+            "thumbnailPath": "assets/thumbnail.png",
             "gifPath": "assets/sampleDemo.gif",
             "suggested": false
         },
@@ -77,6 +80,7 @@
             ],
             "time": "1hr to run",
             "configuration": "Manual configurations required",
+            "thumbnailPath": "assets/thumbnail.png",
             "gifPath": "assets/sampleDemo.gif",
             "suggested": false
         },
@@ -96,7 +100,8 @@
             ],
             "time": "30min to run",
             "configuration": "Ready for debug",
-            "gifPath": "images/preview.png",
+            "thumbnailPath": "images/thumbnail.png",
+            "gifPath": "images/thumbnail.png",
             "suggested": false
         },
         {
@@ -118,6 +123,7 @@
             ],
             "time": "30min to run",
             "configuration": "Manual configurations required",
+            "thumbnailPath": "assets/thumbnail.png",
             "gifPath": "assets/sampleDemo.gif",
             "suggested": false
         },
@@ -138,6 +144,7 @@
             ],
             "time": "45min to run",
             "configuration": "Manual configurations required",
+            "thumbnailPath": "assets/thumbnail.png",
             "gifPath": "assets/sampleDemo.gif",
             "suggested": false
         },
@@ -157,6 +164,7 @@
             ],
             "time": "5min to run",
             "configuration": "Ready for debug",
+            "thumbnailPath": "images/send-proactive-messages.gif",
             "gifPath": "images/send-proactive-messages.gif",
             "suggested": false,
             "downloadUrl": "https://github.com/OfficeDev/Microsoft-Teams-Samples/tree/main/samples/bot-proactive-messaging-teamsfx"
@@ -177,6 +185,7 @@
             ],
             "time": "5min to run",
             "configuration": "Ready for debug",
+            "thumbnailPath": "assets/thumbnail.png",
             "gifPath": "assets/sampleDemo.gif",
             "suggested": false
         },
@@ -196,6 +205,7 @@
             ],
             "time": "5min to run",
             "configuration": "Manual configurations required",
+            "thumbnailPath": "assets/thumbnail.png",
             "gifPath": "assets/sampleDemo.gif",
             "suggested": false
         },
