feat: add thumbnail to samples

--- a/.config/samples-config-v3.json
+++ b/.config/samples-config-v3.json
@@ -227,6 +227,7 @@
             ],
             "time": "5min to run",
             "configuration": "Ready for debug",
+            "thumbnailPath": "assets/thumbnail.png",
             "gifPath": "assets/sampleDemo.gif",
             "suggested": false
         },
@@ -246,6 +247,7 @@
             ],
             "time": "5min to run",
             "configuration": "Ready for debug",
+            "thumbnailPath": "assets/thumbnail.png",
             "gifPath": "assets/sampleDemo.gif",
             "suggested": false
         },
@@ -267,6 +269,7 @@
             ],
             "time": "5min to run",
             "configuration": "Ready for debug",
+            "thumbnailPath": "assets/thumbnail.png",
             "gifPath": "assets/sampleDemo.gif",
             "suggested": false
         },
@@ -288,6 +291,7 @@
             ],
             "time": "10min to run",
             "configuration": "Manual configurations required",
+            "thumbnailPath": "assets/thumbnail.png",
             "gifPath": "assets/sampleDemo.gif",
             "suggested": false
         },
@@ -309,6 +313,7 @@
             ],
             "time": "5min to run",
             "configuration": "Ready for debug",
+            "thumbnailPath": "assets/thumbnail.png",
             "gifPath": "assets/sampleDemo.gif",
             "suggested": false
         },
@@ -331,6 +336,7 @@
             ],
             "time": "30min to run",
             "configuration": "Manual configurations required",
+            "thumbnailPath": "assets/thumbnail.png",
             "gifPath": "assets/sampleDemo.gif",
             "suggested": false
         },
@@ -352,6 +358,7 @@
             ],
             "time": "30min to run",
             "configuration": "Ready for debug",
+            "thumbnailPath": "assets/thumbnail.png",
             "gifPath": "assets/sampleDemo.gif",
             "suggested": false
         },
@@ -371,7 +378,7 @@
             ],
             "time": "5min to run",
             "configuration": "Ready for debug",
-            "gifPath": "assets/sampleDemo.png",
+            "thumbnailPath": "assets/thumbnail.png",
             "suggested": false
         },
         {
@@ -389,7 +396,7 @@
             ],
             "time": "5min to run",
             "configuration": "Ready for debug",
-            "gifPath": "assets/outlook-set-signature-overview.png",
+            "thumbnailPath": "assets/outlook-set-signature-overview.png",
             "suggested": false,
             "downloadUrl": "https://github.com/OfficeDev/Office-Add-in-samples/tree/main/Samples/outlook-set-signature"
         },
@@ -410,7 +417,7 @@
             ],
             "time": "15min to run",
             "configuration": "Manual configurations required",
-            "gifPath": "images/preview.png",
+            "thumbnailPath": "images/preview.png",
             "suggested": false
         },
         {
@@ -431,6 +438,7 @@
             ],
             "time": "5 min to run",
             "configuration": "Manual configurations required",
+            "thumbnailPath": "assets/thumbnail.png",
             "gifPath": "assets/sampleDemo.gif",
             "suggested": false
         },
@@ -451,6 +459,7 @@
             ],
             "time": "5min to run",
             "configuration": "Manual configurations required",
+            "thumbnailPath": "assets/thumbnail.png",
             "gifPath": "assets/sampleDemo.gif",
             "suggested": false
         },
@@ -472,7 +481,7 @@
             ],
             "time": "5min to run",
             "configuration": "Ready for debug",
-            "gifPath": "src/assets/screenshot.png",
+            "thumbnailPath": "src/assets/screenshot.png",
             "suggested": false
         },
         {
@@ -492,7 +501,7 @@
             ],
             "time": "5min to run",
             "configuration": "Ready for debug",
-            "gifPath": "assets/screenshot.png",
+            "thumbnailPath": "assets/screenshot.png",
             "suggested": false
         }
     ]
