feat: add new apim sample (#1019)
* feat: add new apim sample

* fix: update sample

* fix: update wiki and image

* fix: fix coment

* fix: remove error message

* fix: update docs and remove useless files

* feat: include apim provision in local debug

* chore: add sample in config

* fix: add sample tag

* docs: update description and tag

* fix: fix comment

--- a/.config/samples-config-v3.json
+++ b/.config/samples-config-v3.json
@@ -502,6 +502,27 @@
             "configuration": "Ready for debug",
             "thumbnailPath": "assets/screenshot.png",
             "suggested": false
+        },
+        {
+            "id": "sso-enabled-tab-via-apim-proxy",
+            "shortId": "tab-apim",
+            "onboardDate": "2023-09-15",
+            "title": "SSO Enabled Tab via APIM Proxy",
+            "shortDescription": "An SSO-enabled Microsoft Teams Tab app using APIM as a proxy.",
+            "fullDescription": "This is a Microsoft Teams tab app that can display user login information with SSO. This app uses Graph Toolkit as the frontend and Azure API Management as a proxy.",
+            "types": [
+              "Tab"
+            ],
+            "tags": [
+              "Tab",
+              "JS",
+              "API Management",
+              "SSO"
+            ],
+            "time": "5min to run",
+            "configuration": "Ready for debug",
+            "gifPath": "assets/sso-enabled-tab-via-apim-proxy.gif",
+            "suggested": false
         }
     ]
 }
