fix: update aad manifest and auth pages

--- a/.config/samples-config-v3.json
+++ b/.config/samples-config-v3.json
@@ -521,7 +521,8 @@
             ],
             "time": "5min to run",
             "configuration": "Ready for debug",
-            "gifPath": "assets/sso-enabled-tab-via-apim-proxy.gif",
+            "gifPath": "assets/sampleDemo.gif",
+            "thumbnailPath": "assets/thumbnail.png",
             "suggested": false
         }
     ]
