--- a/sso-enabled-tab-via-apim-proxy/teamsapp.local.yml
+++ b/sso-enabled-tab-via-apim-proxy/teamsapp.local.yml
@@ -33,7 +33,7 @@ provision:
       resourceGroupName: ${{AZURE_RESOURCE_GROUP_NAME}} # The AZURE_RESOURCE_GROUP_NAME is a built-in environment variable. TeamsFx will ask you to select or create one resource group if its value is empty. You're free to reference other environment varialbe here, but TeamsFx will not ask you to select or create resource grouop if it's empty in this case.
       templates:
         - path: ./infra/apim.bicep # Relative path to this file
-          parameters: ./infra/azure.parameters.json # Relative path to this file. Placeholders will be replaced with corresponding environment variable before ARM deployment.
+          parameters: ./infra/azure.parameters.local.json # Relative path to this file. Placeholders will be replaced with corresponding environment variable before ARM deployment.
           deploymentName: Create-resources-for-tab # Required when deploy ARM template
       bicepCliVersion: v0.9.1 # Teams Toolkit will download this bicep CLI version from github for you, will use bicep CLI in PATH if you remove this config.
 
