--- a/.github/workflows/ci-sample-validation.yml
+++ b/.github/workflows/ci-sample-validation.yml
@@ -65,7 +65,7 @@ jobs:
 
       - name: Get Changed Folders
         id: get_changed_folders
-        if: ${{ github.event_name == 'pull_request' && github.event.pull_request.base.ref == 'dev' }}
+        if: ${{ github.event_name == 'pull_request' }}
         uses: Stockopedia/action-get-changed-files@v1.2
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
@@ -77,8 +77,25 @@ jobs:
         run: echo ${{ steps.get_changed_folders.outputs.changed }}
 
       - name: Run Sample Validation Tool on New Sample
-        if: ${{ github.event_name == 'pull_request' && github.event.pull_request.base.ref == 'dev' }}
+        if: ${{ github.event_name == 'pull_request' }}
         run: |
-          # This script runs the validation tool against all samples in the samples-config-v3.json file.
+          # This script runs the validation tool against changed samples in the pull request.
           # External samples are excluded from the validation.
-          # result=`node ./validation-tool/validator.cjs -p $line`
+          exceptions=("incoming-webhook-notification")
+          samples=`jq -r ".[]" <<< "${{ steps.get_changed_folders.outputs.changed }}"`
+          validationFailed="validation failed"
+          validationResult=true
+          while IFS= read -r line; do
+            if [[ ! ${exceptions[@]} =~ $line ]]
+            then
+              result=`node ./validation-tool/validator.cjs -p $line`
+              if grep -q "$validationFailed" <<< "$result"; then
+                printf "\nSample '$line' validation failed.\n"
+                echo "$result"
+                validationResult=false
+              fi
+            fi
+          done <<< "$samples"
+          if [ "$validationResult" = false ]; then
+            exit 1
+          fi
