--- a/NPM-search-connector-M365/appPackage/manifest.json
+++ b/NPM-search-connector-M365/appPackage/manifest.json
@@ -15,7 +15,7 @@
         "outline": "outline.png"
     },
     "name": {
-        "short": "npmSearchConnector",
+        "short": "npmSearchConnector${{APP_NAME_SUFFIX}}",
         "full": "full name for npmSearchConnector"
     },
     "description": {
