--- a/.config/samples-config-v3.json
+++ b/.config/samples-config-v3.json
@@ -167,7 +167,12 @@
             "thumbnailPath": "images/send-proactive-messages.gif",
             "gifPath": "images/send-proactive-messages.gif",
             "suggested": false,
-            "downloadUrl": "https://github.com/OfficeDev/Microsoft-Teams-Samples/tree/main/samples/bot-proactive-messaging-teamsfx"
+            "downloadUrlInfo": {
+                "owner": "OfficeDev",
+                "repo": "Microsoft-Teams-Samples",
+                "ref": "main",
+                "dir": "samples/bot-proactive-messaging-teamsfx"
+            }
         },
         {
             "id": "adaptive-card-notification",
@@ -400,7 +405,12 @@
             "thumbnailPath": "assets/outlook-set-signature-overview.png",
             "gifPath": "assets/outlook-set-signature-overview.png",
             "suggested": false,
-            "downloadUrl": "https://github.com/OfficeDev/Office-Add-in-samples/tree/main/Samples/outlook-set-signature"
+            "downloadUrlInfo": {
+                "owner": "OfficeDev",
+                "repo": "Office-Add-in-samples",
+                "ref": "main",
+                "dir": "Samples/outlook-set-signature"
+            }
         },
         {
             "id": "developer-assist-dashboard",
