--- a/test-tool-sample-app/teamsapp.yml
+++ b/test-tool-sample-app/teamsapp.yml
@@ -2,7 +2,7 @@
 version: v1.2
 
 additionalMetadata:
-  sampleTag: TeamsFx-Samples:test-tool-sample-bot
+  sampleTag: TeamsFx-Samples:test-tool-sample-app
 
 environmentFolderPath: ./env
 
