chore: Update CODEOWNERS

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -23,7 +23,7 @@
 /hello-world-in-meeting @eriolchan @JerryYangKai
 /hello-world-tab-codespaces @kimizhu @dooriya @qinezh
 /hello-world-tab-with-backend @adashen @SLdragon @KennethBWSong
-/hello-world-teams-tab-and-outlook-add-in @MSFT-yiz @1yefuwang1 @HuihuiWu-Microsoft
+/hello-world-teams-tab-and-outlook-add-in @MSFT-yiz @jayzhang @HuihuiWu-Microsoft
 /incoming-webhook-notification @kimizhu @dooriya @swatDong @XiaofuHuang
 /notification-codespaces @kimizhu @dooriya @qinezh
 /query-org-user-with-message-extension-sso @adashen @wenytang-ms
