fix: language options

--- a/.config/samples-config-v3.json
+++ b/.config/samples-config-v3.json
@@ -7,8 +7,9 @@
             "Meeting"
         ],
         "languages": [
-            "JavaScript",
-            "TypeScript"
+            "TS",
+            "JS",
+            "Python"
         ],
         "technologies": [
             "Azure",
