chore: update codeowners

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -38,6 +38,6 @@
 /whos-next-meeting-app @MSFT-yiz @HuihuiWu-Microsoft @tecton
 /teams-chef-bot @MSFT-yiz @HuihuiWu-Microsoft @tecton
 /spfx-productivity-dashboard @MSFT-yiz @HuihuiWu-Microsoft @yuqizhou77
-/react-retail-dashboard @MSFT-yiz @HuihuiWu-Microsoft @tecton
+/react-retail-dashboard @MSFT-yiz @HuihuiWu-Microsoft @tecton @yuqizhou77
 /.config/samples-config-v3.json @HuihuiWu-Microsoft @wenytang-ms @tecton @MSFT-yiz @KennethBWSong @LongOddCode
 /.github/workflows/cd.yml @adashen @LongOddCode @Siglud @qinezh @wenytang-ms
