--- a/.config/samples-config-v3.json
+++ b/.config/samples-config-v3.json
@@ -115,7 +115,7 @@
                 "Tab"
             ],
             "tags": [
-                "Meeting extension",
+                "Meeting Extension",
                 "JS"
             ],
             "time": "30min to run",
@@ -155,10 +155,10 @@
             "shortDescription": "Search and Share an NPM Package in Teams and Outlook (Web)",
             "fullDescription": "NPM Search Connector is a Message Extension that runs across Microsoft 365 including Teams and Outlook (Web). It allows you to perform a quick search for a NPM package and insert package details into conversations for easy sharing. The front end is built with Adaptive Cards and the backend is an Azure Bot Service.",
             "types": [
-                "Message extension"
+                "Message Extension"
             ],
             "tags": [
-                "Message extension",
+                "Message Extension",
                 "JS",
                 "Outlook"
             ],
@@ -262,12 +262,12 @@
             "onboardDate": "2022-09-20",
             "title": "Org User Search Connector",
             "shortDescription": "Query Org User with Message Extension SSO",
-            "fullDescription": "This is a simple search-based message extension app demonstrating how to integrate with Bot Framework SDK, TeamsFx SDK and Microsoft Graph API to implement a feature that queries organization's user with single sign on (SSO) capability.",
+            "fullDescription": "This is a simple search-based Message Extension app demonstrating how to integrate with Bot Framework SDK, TeamsFx SDK and Microsoft Graph API to implement a feature that queries organization's user with single sign on (SSO) capability.",
             "types": [
-                "Message extension"
+                "Message Extension"
             ],
             "tags": [
-                "Message extension",
+                "Message Extension",
                 "SSO"
             ],
             "time": "5min to run",
@@ -370,15 +370,15 @@
             "shortId": "share-now",
             "onboardDate": "2021-05-17",
             "title": "Share Now",
-            "shortDescription": "Knowledge sharing app contains a Tab and a Message extension",
+            "shortDescription": "Knowledge sharing app contains a Tab and a Message Extension",
             "fullDescription": "Share Now promotes the exchange of information between colleagues by enabling users to share content within the Teams environment. Users engage the app to share items of interest, discover new shared content, set preferences, and bookmark favorites for later reading.",
             "types": [
                 "Tab",
-                "Message extension"
+                "Message Extension"
             ],
             "tags": [
                 "Tab",
-                "Message extension",
+                "Message Extension",
                 "TS"
             ],
             "time": "30min to run",
@@ -399,7 +399,7 @@
             ],
             "tags": [
                 "Tab",
-                "Outlook add-in"
+                "Outlook Add-in"
             ],
             "time": "5min to run",
             "configuration": "Ready for debug",
@@ -418,7 +418,7 @@
                 "Tab"
             ],
             "tags": [
-                "Outlook add-in"
+                "Outlook Add-in"
             ],
             "time": "5min to run",
             "configuration": "Ready for debug",
@@ -576,7 +576,7 @@
               "TS",
               "Azure Durable Function",
               "Notification",
-              "Large user scale"
+              "Large User Scale"
             ],
             "time": "30min to run",
             "configuration": "Manual configurations required",
@@ -597,7 +597,7 @@
             "tags": [
               "Bot",
               "TS",
-              "Microsoft Graph connectors"
+              "Microsoft Graph Connectors"
             ],
             "time": "30min to run",
             "configuration": "Manual configurations required",
