--- a/hello-world-bot-with-tab/teamsapp.yml
+++ b/hello-world-bot-with-tab/teamsapp.yml
@@ -8,7 +8,7 @@ additionalMetadata:
 
 environmentFolderPath: ./env
 
-# Triggered when 'teamsfx provision' is executed
+# Triggered when 'teamsapp provision' is executed
 provision:
   # Creates a Teams app
   - uses: teamsApp/create
@@ -71,7 +71,7 @@ provision:
       indexPage: index.html
       errorPage: error.html
 
-    # Triggered when 'teamsfx deploy' is executed
+    # Triggered when 'teamsapp deploy' is executed
 deploy:
   # Run npm command
   - uses: cli/runNpmCommand
@@ -107,7 +107,7 @@ deploy:
       # or add it to your environment variable file.
       resourceId: ${{BOT_AZURE_APP_SERVICE_RESOURCE_ID}}
 
-    # Triggered when 'teamsfx publish' is executed
+    # Triggered when 'teamsapp publish' is executed
 publish:
   # Validate using manifest schema
   - uses: teamsApp/validateManifest
