--- a/hello-world-teams-tab-and-outlook-add-in/teamsapp.yml
+++ b/hello-world-teams-tab-and-outlook-add-in/teamsapp.yml
@@ -8,7 +8,7 @@ additionalMetadata:
 
 environmentFolderPath: ./env
 
-# Triggered when 'teamsfx provision' is executed
+# Triggered when 'teamsapp provision' is executed
 provision:
   # Creates a Teams app
   - uses: teamsApp/create
@@ -54,7 +54,7 @@ provision:
       # Relative path to this file. This is the path for built zip file.
       appPackagePath: ./appPackage/build/appPackage.${{TEAMSFX_ENV}}.zip
 
-# Triggered when 'teamsfx deploy' is executed
+# Triggered when 'teamsapp deploy' is executed
 deploy:
   - name: npmInstall
     uses: cli/runNpmCommand # Run npm command
@@ -77,7 +77,7 @@ deploy:
       # or add it to your environment variable file.
       resourceId: ${{TAB_AZURE_STORAGE_RESOURCE_ID}}
 
-# Triggered when 'teamsfx publish' is executed
+# Triggered when 'teamsapp publish' is executed
 publish:
   # - uses: teamsApp/validateManifest # Validate using manifest schema
   #   with:
