--- a/spfx-productivity-dashboard/teamsapp.yml
+++ b/spfx-productivity-dashboard/teamsapp.yml
@@ -6,7 +6,7 @@ additionalMetadata:
 
 environmentFolderPath: ./env
 
-# Triggered when 'teamsfx deploy' is executed
+# Triggered when 'teamsapp deploy' is executed
 deploy:
   - uses: cli/runNpmCommand
     with:
@@ -25,7 +25,7 @@ deploy:
       createAppCatalogIfNotExist: false
       packageSolutionPath: ./src/config/package-solution.json
 
-# Triggered when 'teamsfx provision' is executed
+# Triggered when 'teamsapp provision' is executed
 provision:
   # Creates a Teams app
   - uses: teamsApp/create
@@ -72,7 +72,7 @@ provision:
       titleId: M365_TITLE_ID
       appId: M365_APP_ID
 
-# Triggered when 'teamsfx publish' is executed
+# Triggered when 'teamsapp publish' is executed
 publish:
   # Validate using manifest schema
   - uses: teamsApp/validateManifest
