--- a/sso-enabled-tab-via-apim-proxy/teamsapp.yml
+++ b/sso-enabled-tab-via-apim-proxy/teamsapp.yml
@@ -6,7 +6,7 @@ additionalMetadata:
 
 environmentFolderPath: ./env
 
-# Triggered when 'teamsfx provision' is executed
+# Triggered when 'teamsapp provision' is executed
 provision:
   - uses: aadApp/create # Creates a new Azure Active Directory (AAD) app to authenticate users if the environment variable that stores clientId is empty
     with:
@@ -76,7 +76,7 @@ provision:
     with:
       appPackagePath: ./appPackage/build/appPackage.${{TEAMSFX_ENV}}.zip # Relative path to this file. This is the path for building zip file.
 
-# Triggered when 'teamsfx deploy' is executed
+# Triggered when 'teamsapp deploy' is executed
 deploy:
   # Run npm command
   - uses: cli/runNpmCommand
@@ -103,7 +103,7 @@ deploy:
       # or add it to your environment variable file.
       resourceId: ${{TAB_AZURE_STORAGE_RESOURCE_ID}}
 
-# Triggered when 'teamsfx publish' is executed
+# Triggered when 'teamsapp publish' is executed
 publish:
   # Validate using manifest schema
   - uses: teamsApp/validateManifest
